// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (AWS ECS + Docker) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Docker Build, Deploy to Amazon ECS, Publish Docker Image (GHCR) (3 jobs)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  build-docker:
    name: Docker Build
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: docker/build-push-action@v6
        with:
          push: false
          file: Dockerfile
          context: .
  deploy-aws:
    name: Deploy to Amazon ECS
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    environment: production
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: aws-actions/configure-aws-credentials@v4
        with:
          aws-access-key-id: \${{ secrets.AWS_ACCESS_KEY_ID }}
          aws-secret-access-key: \${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws-region: \${{ vars.AWS_REGION || 'us-east-1' }}
      - uses: aws-actions/amazon-ecr-login@v2
      - uses: aws-actions/amazon-ecs-deploy-task-definition@v2
        with:
          task-definition: task-definition.json
          service: \${{ vars.ECS_SERVICE }}
          cluster: \${{ vars.ECS_CLUSTER }}
          wait-for-service-stability: true
  deploy-ghcr:
    name: Publish Docker Image (GHCR)
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    timeout-minutes: 15
    permissions:
      contents: read
      packages: write
    steps:
      - uses: actions/checkout@v4
      - uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ github.actor }}
          password: \${{ secrets.GITHUB_TOKEN }}
      - uses: docker/metadata-action@v5
        with:
          images: ghcr.io/\${{ github.repository }}
      - uses: docker/build-push-action@v6
        with:
          push: true
          tags: \${{ steps.ghcr-meta.outputs.tags }}
          labels: \${{ steps.ghcr-meta.outputs.labels }}
          file: Dockerfile
          context: .
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (IBM Cloud) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  ci:
    name: CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: IBM/actions-ibmcloud-cli@v1
        with:
          ibmcloud-api-key: \${{ secrets.IBM_CLOUD_API_KEY }}
      - run: ibmcloud ks cluster config --cluster \${{ env.MY_CLUSTER }} && kubectl apply -f k8s/
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (Kubernetes) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Deploy to Kubernetes (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  deploy-k8s:
    name: Deploy to Kubernetes
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    environment: production
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: azure/setup-helm@v4.2.0
      - run: helm upgrade --install release . --wait
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (Octopus Deploy) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  ci:
    name: CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: OctopusDeploy/install-octopus-cli-action@v1
        with:
          version: latest
      - uses: OctopusDeploy/push-package-action@v3
        with:
          server: \${{ secrets.OCTOPUS_SERVER_URL }}
          api_key: \${{ secrets.OCTOPUS_API_KEY }}
          space: Default
      - uses: OctopusDeploy/create-release-action@v3
        with:
          server: \${{ secrets.OCTOPUS_SERVER_URL }}
          api_key: \${{ secrets.OCTOPUS_API_KEY }}
          project: \${{ env.OCTOPUS_PROJECT }}
          space: Default
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (Red Hat OpenShift) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  ci:
    name: CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: redhat-actions/openshift-tools-installer@v1
        with:
          oc: "4"
      - uses: redhat-actions/oc-login@v1
        with:
          openshift_server_url: \${{ secrets.OPENSHIFT_SERVER }}
          openshift_token: \${{ secrets.OPENSHIFT_TOKEN }}
          insecure_skip_tls_verify: true
      - run: oc rollout status dc/\${{ env.OPENSHIFT_APP_NAME }}
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (Tencent Cloud TKE) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  ci:
    name: CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: tencentcloud-actions/setup-tccli@v1
        with:
          secret-id: \${{ secrets.TENCENT_SECRET_ID }}
          secret-key: \${{ secrets.TENCENT_SECRET_KEY }}
          region: ap-guangzhou
      - run: tccli tke DescribeClusterKubeconfig --clusterId \${{ env.TKE_CLUSTER_ID }} && kubectl apply -f k8s/
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Cloud Deployment (Terraform) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Terraform Apply (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  deploy-terraform:
    name: Terraform Apply
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    environment: production
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: hashicorp/setup-terraform@v3
      - run: terraform init
      - run: terraform apply -auto-approve
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Declarative Security Scanning Suite (Anchore, StackHawk, Zscaler) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Code Scanning & SAST Workflow (Level: strict)
# ==============================================================================

name: Code Scanning & Security Analyzers
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
  security-events: write
  pull-requests: write
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  hadolint:
    name: Dockerfile Lint (Hadolint)
    runs-on: ubuntu-latest
    timeout-minutes: 10
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Lint Dockerfile with Hadolint
        uses: hadolint/hadolint-action@v3.1.0
        with:
          dockerfile: Dockerfile
          format: sarif
          output-file: hadolint.sarif
          no-fail: false
      - name: Upload Hadolint scan results
        if: always() && hashFiles('hadolint.sarif') != ''
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: hadolint.sarif
  dependency-review:
    name: Dependency Review (PR)
    runs-on: ubuntu-latest
    timeout-minutes: 10
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Dependency Review
        if: github.event_name == 'pull_request'
        uses: actions/dependency-review-action@v4
        with:
          fail-on-severity: high
        continue-on-error: true
  osv-scanner:
    name: Open Source Vulnerability Scan (Google OSV)
    runs-on: ubuntu-latest
    timeout-minutes: 10
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Run Google OSV-Scanner
        uses: google/osv-scanner-action/osv-scanner-action@v1.9.0
        with:
          scan-args: --call-analysis=false --format=sarif --output=osv-results.sarif .
        continue-on-error: true
      - name: Upload OSV-Scanner results
        if: always() && hashFiles('osv-results.sarif') != ''
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: osv-results.sarif
  tfsec:
    name: Terraform IaC Security (tfsec)
    runs-on: ubuntu-latest
    timeout-minutes: 10
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Scan Terraform IaC with tfsec
        uses: aquasecurity/tfsec-action@v1.0.3
        with:
          sarif_file: tfsec.sarif
          soft-fail: false
      - name: Upload tfsec scan results
        if: always() && hashFiles('tfsec.sarif') != ''
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: tfsec.sarif
  zscaler-iac:
    name: Infrastructure as Code Security (Zscaler)
    runs-on: ubuntu-latest
    timeout-minutes: 10
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Run Zscaler IaC Scan
        uses: ZscalerCWP/Zscaler-IaC-Action@v1
        with:
          client-id: \${{ secrets.ZSCALER_CLIENT_ID }}
          client-secret: \${{ secrets.ZSCALER_CLIENT_SECRET }}
          fail-build: false
          sarif: zscaler-results.sarif
      - name: Upload Zscaler IaC results
        if: always() && hashFiles('zscaler-results.sarif') != ''
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: zscaler-results.sarif
  stackhawk:
    name: Dynamic API Security Testing (StackHawk)
    runs-on: ubuntu-latest
    timeout-minutes: 30
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Run StackHawk HawkScan
        uses: stackhawk/hawkscan-action@v2
        with:
          apiKey: \${{ secrets.HAWK_API_KEY }}
          configurationFiles: stackhawk.yml
  semgrep:
    name: Semgrep SAST Analysis
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Run Semgrep SAST
        uses: semgrep/semgrep-action@v1
        with:
          config: auto
          generateSarif: "1"
        continue-on-error: true
      - name: Upload Semgrep scan results
        if: always() && hashFiles('semgrep.sarif') != ''
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: semgrep.sarif
  scorecard:
    name: Supply Chain Security (OpenSSF Scorecard)
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Run OpenSSF Scorecard
        uses: ossf/scorecard-action@v2.4.0
        with:
          results_file: scorecard-results.sarif
          results_format: sarif
          publish_results: false
      - name: Upload Scorecard scan results
        if: always() && hashFiles('scorecard-results.sarif') != ''
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: scorecard-results.sarif
  anchore:
    name: Vulnerability Scan (Anchore Grype)
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Run Anchore Grype Vulnerability Scanner
        uses: anchore/scan-action@v4
        with:
          path: .
          fail-build: false
          output-format: sarif
          severity: high
      - name: Upload Anchore scan results
        if: always() && hashFiles('results.sarif') != ''
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: results.sarif
  sysdig:
    name: Container Security (Sysdig)
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - name: Harden GitHub Actions Runner
        uses: step-security/harden-runner@v2
        with:
          egress-policy: audit
      - name: Checkout repository
        uses: actions/checkout@v4
      - name: Run Sysdig Inline Scan
        uses: sysdiglabs/scan-action@v3
        with:
          image-tag: \${{ env.IMAGE_NAME || 'app:latest' }}
          sysdig-secure-token: \${{ secrets.SYSDIG_SECURE_TOKEN }}
          output-format: sarif
          output-file: sysdig.sarif
      - name: Upload Sysdig scan results
        if: always() && hashFiles('sysdig.sarif') != ''
        uses: github/codeql-action/upload-sarif@v3
        with:
          sarif_file: sysdig.sarif
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Frontend with Webpack 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Node.js CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-node:
    name: Node.js CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 20.x
          cache: npm
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Polyglot Monorepo (Node + Python + Docker) 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Node.js CI, Python CI, Docker Build, Publish Docker Image (GHCR) (4 jobs)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-node:
    name: Node.js CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 20.x
          cache: npm
          cache-dependency-path: "**/package-lock.json"
  test-python:
    name: Python CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-python@v5
        with:
          python-version: 3.x
          cache: pip
          cache-dependency-path: "**/requirements.txt"
      - run: python -m pip install --upgrade pip pytest && if [ -f requirements.txt ]; then pip install -r requirements.txt; fi && for req in $(find . -name 'requirements.txt' -not -path '*/.*' -not -path './requirements.txt'); do pip install -r "$req"; done
      - run: pytest || [ $? -eq 5 ]
  build-docker:
    name: Docker Build
    runs-on: ubuntu-latest
    timeout-minutes: 15
    needs:
      - test-node
      - test-python
    steps:
      - uses: actions/checkout@v4
      - uses: docker/build-push-action@v6
        with:
          push: false
          file: Dockerfile
          context: .
  deploy-ghcr:
    name: Publish Docker Image (GHCR)
    runs-on: ubuntu-latest
    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
    timeout-minutes: 15
    needs:
      - test-node
      - test-python
    permissions:
      contents: read
      packages: write
    steps:
      - uses: actions/checkout@v4
      - uses: docker/login-action@v3
        with:
          registry: ghcr.io
          username: \${{ github.actor }}
          password: \${{ secrets.GITHUB_TOKEN }}
      - uses: docker/metadata-action@v5
        with:
          images: ghcr.io/\${{ github.repository }}
      - uses: docker/build-push-action@v6
        with:
          push: true
          tags: \${{ steps.ghcr-meta.outputs.tags }}
          labels: \${{ steps.ghcr-meta.outputs.labels }}
          file: Dockerfile
          context: .
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: R Package with renv 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  ci:
    name: CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: r-lib/actions/setup-r@v2
        with:
          r-version: release
      - uses: r-lib/actions/setup-r-dependencies@v2
        with:
          extra-packages: devtools rcmdcheck
      - uses: r-lib/actions/setup-r@v2
        with:
          r-version: release
      - uses: r-lib/actions/setup-r-dependencies@v2
        with:
          extra-packages: devtools rcmdcheck
      - run: Rscript -e 'devtools::test()'
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Scala with SBT 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Java CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-java:
    name: Java CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-java@v4
        with:
          distribution: temurin
          java-version: "21"
      - uses: actions/setup-java@v4
        with:
          distribution: temurin
          java-version: "21"
      - uses: actions/setup-java@v4
        with:
          distribution: temurin
          java-version: "21"
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack .NET with Solution 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: .NET CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-dotnet:
    name: .NET CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-dotnet@v4
        with:
          dotnet-version: 8.0.x
      - run: if ls *.sln 1> /dev/null 2>&1 || ls *.csproj 1> /dev/null 2>&1 || ls *.fsproj 1> /dev/null 2>&1; then dotnet restore && dotnet build --no-restore; else for proj in $(find . -maxdepth 5 \\( -name '*.sln' -o -name '*.csproj' -o -name '*.fsproj' \\) -not -path '*/.*' -not -path '*/bin/*' -not -path '*/obj/*' | sort -u); do echo "Building $proj..." && dotnet restore "$proj" && dotnet build "$proj" --no-restore; done; fi
      - run: if ls *.sln 1> /dev/null 2>&1 || ls *Test*.csproj 1> /dev/null 2>&1 || ls *test*.csproj 1> /dev/null 2>&1; then dotnet test --no-build --verbosity normal || dotnet test --verbosity normal; else for proj in $(find . -maxdepth 5 \\( -name '*.sln' -o -name '*Test*.csproj' -o -name '*test*.csproj' \\) -not -path '*/.*' -not -path '*/bin/*' -not -path '*/obj/*' | sort -u); do echo "Testing $proj..." && dotnet test "$proj" --verbosity normal; done; fi
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Go 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Go CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-go:
    name: Go CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-go@v5
        with:
          go-version: "1.22"
          cache: true
      - run: if [ -f go.mod ]; then go build -v ./...; else for mod in $(find . -name 'go.mod' -not -path '*/.*'); do (cd "$(dirname "$mod")" && echo "Building $(dirname "$mod")..." && go build -v ./...); done; fi
      - run: if [ -f go.mod ]; then go test -v ./...; else for mod in $(find . -name 'go.mod' -not -path '*/.*'); do (cd "$(dirname "$mod")" && echo "Testing $(dirname "$mod")..." && go test -v ./...); done; fi
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Java with Maven 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Java CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-java:
    name: Java CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-java@v4
        with:
          java-version: "17"
          distribution: temurin
      - run: if [ -f pom.xml ]; then mvn -B package --file pom.xml; else for pom in $(find . -name 'pom.xml' -not -path '*/.*'); do mvn -B package --file "$pom"; done; fi
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Node.js with pnpm and vitest 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Node.js CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-node:
    name: Node.js CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: pnpm/action-setup@v4
      - uses: actions/setup-node@v4
        with:
          node-version: 20.x
          cache: pnpm
      - run: pnpm test --if-present
      - run: npm run test -- --run
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Python with pytest 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Python CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-python:
    name: Python CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: actions/setup-python@v5
        with:
          python-version: 3.x
          cache: pip
      - run: python -m pip install --upgrade pip pytest && if [ -f requirements.txt ]; then pip install -r requirements.txt; fi && for req in $(find . -name 'requirements.txt' -not -path '*/.*' -not -path './requirements.txt'); do pip install -r "$req"; done
      - run: pytest || [ $? -eq 5 ]
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Single-Stack Rust 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: Rust CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-rust:
    name: Rust CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - name: Cache Rust Dependencies
        uses: actions/cache@v4
        with:
          path: |-
            ~/.cargo/registry
            ~/.cargo/git
            target
          key: \${{ runner.os }}-cargo-\${{ hashFiles('**/Cargo.lock') }}
          restore-keys: \${{ runner.os }}-cargo-
      - run: if [ -f Cargo.toml ]; then cargo build --verbose; else for toml in $(find . -name 'Cargo.toml' -not -path '*/.*' -not -path '*/target/*'); do (cd "$(dirname "$toml")" && echo "Building $(dirname "$toml")..." && cargo build --verbose); done; fi
      - run: if [ -f Cargo.toml ]; then cargo test --verbose; else for toml in $(find . -name 'Cargo.toml' -not -path '*/.*' -not -path '*/target/*'); do (cd "$(dirname "$toml")" && echo "Testing $(dirname "$toml")..." && cargo test --verbose); done; fi
"
`;

exports[`Regression Snapshot Test Harness > Golden Snapshot: Symfony PHP Framework 1`] = `
"# ==============================================================================
# Generated by Auto GitHub Actions (auto-gha)
# Workflow: PHP CI (1 job)
# Configuration: Parallel DAG | Dependency Caching: Enabled | Production Hardening: Enabled
# ==============================================================================

name: CI/CD Pipeline
on:
  push:
    branches:
      - main
  pull_request:
    branches:
      - main
permissions:
  contents: read
concurrency:
  group: \${{ github.workflow }}-\${{ github.ref }}
  cancel-in-progress: true
jobs:
  test-php:
    name: PHP CI
    runs-on: ubuntu-latest
    timeout-minutes: 15
    steps:
      - uses: actions/checkout@v4
      - uses: shivammathur/setup-php@v2
        with:
          php-version: "8.2"
      - run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist && (vendor/bin/phpunit || [ $? -eq 0 ])
      - uses: shivammathur/setup-php@v2
        with:
          php: "8.3"
          extensions: mbstring, xml, ctype, iconv, intl, pdo_sqlite
          coverage: none
      - run: composer install --prefer-dist --no-progress
      - run: php bin/phpunit
"
`;
